--- a/posts/2019-04-07-historical_newspaper_scraping_tesseract.qmd
+++ b/posts/2019-04-07-historical_newspaper_scraping_tesseract.qmd
@@ -17,7 +17,7 @@ execute:
 <p>I have been playing around with historical newspapers data for some months now. The “obvious” type of analysis
 to do is NLP, but there is also a lot of numerical data inside historical newspapers.
 For instance, you can find these tables that show the market prices of the day in the <em>L’Indépendance Luxembourgeoise</em>:</p>
-<p><img src="../assets/img/market_price_table.png" / width="80%" height="auto"><!-- --></p>
+<div style="text-align: center;"><img src="../assets/img/market_price_table.png"  width="80%" height="auto"></div>
 <p>I wanted to see how easy it was to extract these tables from the newspapers and then make it available.
 It was a bit more complicated than anticipated.</p>
 <div id="download-data" class="section level2">
@@ -103,7 +103,7 @@ plan(multiprocess, workers = 8)
 image_paths %&gt;%
     future_map(prepare_image)</code></pre>
 <p>The picture below shows the result:</p>
-<p><img src="../assets/img/table_and_edit.jpg" / width="80%" height="auto"><!-- --></p>
+<div style="text-align: center;"><img src="../assets/img/table_and_edit.jpg"  width="80%" height="auto"></div>
 <p>Now comes the complicated part, which is going from the image above, to the dataset below:</p>
 <pre><code>good_fr,good_en,unit,market_date,price,source_url
 Froment,Wheat,hectolitre,1875-08-28,23,https://iiif.eluxemburgensia.lu/iiif/2/ark:%2F70795%2F02grxj%2Fpages%2F1/full/full/0/default.jpg
@@ -371,7 +371,7 @@ that particular price of smoked pig meat is actually the price of another, more 
 <p>If you go to the first url, you will land on the first page of the newspaper. To check the table,
 you need to check the third page, by changing this part of the url “pages%2F1” to this “pages%2F3”.</p>
 <p>You will then find the following:</p>
-<p><img src="../assets/img/price_smoked_pig.png" / width="80%" height="auto"><!-- --></p>
+<div style="text-align: center;"><img src="../assets/img/price_smoked_pig.png"  width="80%" height="auto"></div>
 <p>As you can see, the price was 2.5, but the OCR returned 7.5. This is a problem that is unavoidable
 with OCR; there is no way of knowing a priori if characters were not well recognized. It is actually
 quite interesting how the price for smoked pig meat stayed constant through all these years.
